--- a/transactions/src/main/resources/application.yml
+++ b/transactions/src/main/resources/application.yml
@@ -1,2 +1,13 @@
-server:
-  port: 8081
+ spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+ server:
+   port: 8081
