docker-compose.yml

--- a/app/src/main/resources/application-postgres.yml
+++ b/app/src/main/resources/application-postgres.yml
@@ -1,10 +1,7 @@
 domain: 127.0.0.1
 resource:
   server:
-    url: http://${domain}:8081
-auth:
-  server:
-    url: http://${domain}:9000
+    url: http://resource-server:8081
 spring:
   security:
     oauth2:
@@ -19,8 +16,8 @@ spring:
             client-name: Transactions API Client
         provider:
           transactions-api:
-            authorization-uri: ${auth.server.url}/oauth2/authorize
-            token-uri: ${auth.server.url}/oauth2/token
+            authorization-uri: http://${domain}:9000/oauth2/authorize
+            token-uri: http://auth-server:9000/oauth2/token
 server:
   port: 8082
   servlet:
