--- a/transactions/src/main/resources/application.yml
+++ b/transactions/src/main/resources/application.yml
@@ -1,20 +1,24 @@
- spring:
+spring:
+  datasource:
+    url: jdbc:postgresql://postgres:5432/resourcedb
+    username: postgres
+    password: postgres
   r2dbc:
     url: r2dbc:postgresql://postgres:5432/resourcedb
     username: postgres
     password: postgres
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
- server:
-   port: 8081
- logging:
-   level:
-     org.springframework.security: DEBUG
-     org.springframework.web: DEBUG
-     org.springframework.session: DEBUG
-     org.springframework.data.r2dbc: DEBUG
-     org.springframework.context.annotation: DEBUG
+server:
+  port: 8081
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.session: DEBUG
+    org.springframework.data.r2dbc: DEBUG
+    org.springframework.context.annotation: DEBUG
 
- auth:
-   server:
-     url: http://127.0.0.1:9000
+auth:
+  server:
+    url: http://127.0.0.1:9000
