--- a/transactions/src/main/resources/application-postgres.yml
+++ b/transactions/src/main/resources/application-postgres.yml
@@ -13,6 +13,7 @@ server:
   port: 8081
 logging:
   level:
+    liquibase: DEBUG
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
     org.springframework.session: DEBUG
