--- a/transactions/src/main/resources/application.yml
+++ b/transactions/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/resourcedb
+    url: jdbc:postgresql://127.0.0.1:5432/resourcedb
     username: postgres
     password: postgres
   r2dbc:
-    url: r2dbc:postgresql://postgres:5432/resourcedb
+    url: r2dbc:postgresql://127.0.0.1:5432/resourcedb
     username: postgres
     password: postgres
   liquibase:
@@ -13,6 +13,7 @@ server:
   port: 8081
 logging:
   level:
+    liquibase: DEBUG
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
     org.springframework.session: DEBUG
