--- a/transactions/src/main/resources/application.yml
+++ b/transactions/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
     username: postgres
     password: postgres
   liquibase:
+    enabled: true
     change-log: classpath:db/changelog/db.changelog-master.yaml
 server:
   port: 8081
