--- a/transactions/src/main/resources/application-postgres.yml
+++ b/transactions/src/main/resources/application-postgres.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:postgresql://postgres:5432/resourcedb
     username: postgres
     password: postgres
+    driver-class-name: org.postgresql.Driver
   r2dbc:
     url: r2dbc:postgresql://postgres:5432/resourcedb
     username: postgres
