--- a/app/src/main/resources/application-postgres.yml
+++ b/app/src/main/resources/application-postgres.yml
@@ -1,10 +1,10 @@
 domain: 127.0.0.1
 resource:
   server:
-    url: http://resource-server:8082
+    url: http://localhost:8082
 auth:
   server:
-    url: http://nginx:8084
+    url: http://localhost:8080
 spring:
   security:
     oauth2:
@@ -20,7 +20,7 @@ spring:
             client-name: Keycloak Client
         provider:
           keycloak:
-            authorization-uri: http://${domain}:8084/realms/what-if/protocol/openid-connect/auth
+            authorization-uri: http://${domain}:8080/realms/what-if/protocol/openid-connect/auth
             token-uri: ${auth.server.url}/realms/what-if/protocol/openid-connect/token
             user-info-uri: ${auth.server.url}/realms/what-if/protocol/openid-connect/userinfo
             jwk-set-uri: ${auth.server.url}/realms/what-if/protocol/openid-connect/certs
