--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         condition: service_started
     environment:
       - SPRING_PROFILES_ACTIVE=postgres
-      - KEYCLOAK_ISSUER_URI=http://localhost:8080/realms/what-if
+      - KEYCLOAK_ISSUER_URI=http://keycloak:8080/realms/what-if
     networks:
       - app-network
 
