custom jwt validator configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
         condition: service_started
     environment:
       - SPRING_PROFILES_ACTIVE=postgres
-      - KEYCLOAK_ISSUER_URI=http://keycloak:8080/realms/what-if
+      - KEYCLOAK_JWK_SET_URL=http://keycloak:8080/realms/what-if/protocol/openid-connect/certs
+      - KEYCLOAK_ALLOWED_ISSUERS=http://keycloak:8080/realms/what-if,http://nginx:8084/realms/what-if
     networks:
       - app-network
 
