--- a/resources/src/main/resources/application-postgres.yml
+++ b/resources/src/main/resources/application-postgres.yml
@@ -1,11 +1,10 @@
 db:
   domain: postgres
+keycloak:
+  issuer:
+    jwkSetUrl: ${KEYCLOAK_JWK_SET_URL}
+    allowedIssuers: ${KEYCLOAK_ALLOWED_ISSUERS}
 spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: ${KEYCLOAK_ISSUER_URI}
   r2dbc:
     url: r2dbc:postgresql://${db.domain}:5432/resourcedb
     username: postgres
