--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=postgres
       - KEYCLOAK_JWK_SET_URL=http://keycloak:8080/realms/what-if/protocol/openid-connect/certs
-      - KEYCLOAK_ALLOWED_ISSUERS=http://keycloak:8080/realms/what-if,http://nginx:8084/realms/what-if
+      - KEYCLOAK_ALLOWED_ISSUERS=http://keycloak:8080/realms/what-if,http://127.0.0.1:8080/realms/what-if
     networks:
       - app-network
 
