--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,11 @@ services:
       - app-network
 
   keycloak:
-    image: quay.io/keycloak/keycloak:26.2.5-0
     container_name: keycloak
     command: start-dev --import-realm
+    build:
+      context: ./keycloak
+      dockerfile: Dockerfile
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
@@ -36,7 +38,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "/bin/sh", "-c", "exec 3<>/dev/tcp/127.0.0.1/8080; echo -e 'GET /health/ready HTTP/1.1\\r\\nHost: localhost\\r\\nConnection: close\\r\\n\\r\\n' >&3; if [ $? -eq 0 ]; then echo 'Healthcheck Successful'; exit 0; else echo 'Healthcheck Failed'; exit 1; fi"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:8080/health/ready"]
       interval: 5s
       timeout: 5s
       retries: 30
