--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,9 @@ services:
       - app-network
 
   keycloak:
+    image: quay.io/keycloak/keycloak:26.2.5-0
     container_name: keycloak
     command: start-dev --import-realm
-    build:
-      context: ./keycloak
-      dockerfile: Dockerfile
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
@@ -38,7 +36,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://127.0.0.1:8080/health/ready"]
+      test: ["CMD", "/bin/sh", "-c", "echo -e 'GET /health/ready HTTP/1.1\r\nHost: localhost\r\nConnection: close\r\n\r\n' | nc -w 1 localhost 8080 | grep '200 OK'"]
       interval: 5s
       timeout: 5s
       retries: 30
