--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,9 @@ services:
     ports:
       - "8082:8082"
     depends_on:
-      keycloak:
-        condition: service_healthy
       postgres:
         condition: service_started
+    restart: always
     environment:
       - SPRING_PROFILES_ACTIVE=postgres
       - KEYCLOAK_JWK_SET_URL=http://keycloak:8080/realms/what-if/protocol/openid-connect/certs
@@ -25,6 +24,7 @@ services:
     image: quay.io/keycloak/keycloak:26.2.5-0
     container_name: keycloak
     command: start-dev --import-realm
+    restart: always
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
@@ -35,19 +35,13 @@ services:
       - "8080:8080"
     networks:
       - app-network
-    healthcheck:
-      test: ["CMD", "/bin/sh", "-c", "echo -e 'GET /health/ready HTTP/1.1\r\nHost: localhost\r\nConnection: close\r\n\r\n' | nc -w 1 localhost 8080 | grep '200 OK'"]
-      interval: 5s
-      timeout: 5s
-      retries: 30
-    depends_on:
-      - postgres
 
   postgres:
     image: postgres:16
     container_name: postgres
     ports:
       - "5432:5432"
+    restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -64,6 +58,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8081:8081"
+    restart: always
     depends_on:
       - backend
     stdin_open: true
@@ -80,6 +75,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8083:8083"
+    restart: always
     depends_on:
       - resource-server
       - nginx
@@ -95,6 +91,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "8084:8084"
+    restart: always
     networks:
       - app-network
 
